# loaf

./: README.md  design.md  langspec.md  why.md
compiler/: Cargo.toml  LANGUAGE_SPEC.md  comprehensive_test.loaf  debug_deps.crouton  debug_deps.loaf  simple_test.loaf  test_chain.loaf  test_concat_only.loaf  test_debug.loaf  test_runner_demo.loaf  test_simple.loaf  test_simple_func.loaf  test_simple_order.loaf  test_working_chain.loaf
compiler/.github/: copilot-instructions.md
compiler/examples/: auto_promises.crouton  auto_promises.loaf  endpoint.loaf  promises.crouton  promises.loaf  promises.loaf.backup  simple.crouton  simple.loaf
compiler/src/: lib.rs  main.rs
compiler/src/analyzer/: mod.rs
compiler/src/cli/: mod.rs
compiler/src/codegen/: mod.rs
compiler/src/lexer/: mod.rs
compiler/src/parser/: mod.rs
compiler/src/runtime/: mod.rs
compiler/src/test_runner/: mod.rs
runtime/: BYTECODE_SPEC.md  Cargo.toml  demo.crouton
runtime/src/: lib.rs  main.rs
runtime/src/bytecode/: instruction.rs  mod.rs  opcode.rs  parser.rs
runtime/src/heap/: manager.rs  mark_sweep.rs  mod.rs  standard_heap.rs
runtime/src/memory/: manager.rs  mod.rs  references.rs
runtime/src/runtime/: config.rs  executor.rs  mod.rs
runtime/src/utils/: mod.rs
runtime/src/vm/: error.rs  execution_context.rs  interpreter.rs  mod.rs  value.rs
